2010-06-08  Paul Fitzpatrick  <paulfitz@nominal.csail.mit.edu>

	* conf/YarpPlugin.cmake: improve internal documentation of
	plugin system

	* conf/FindGtkPlus.cmake: apply OSX patch from Gianluca Massera

	* conf/FindGthread.cmake: apply OSX patch from Gianluca Massera

2010-06-05  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* scripts/fetch-ace.sh: Change ACE configuration when bundled
	with YARP to facilitate compiling YARP with gcc (as opposed
	to g++).  The core yarp libraries and executables make
	no use of C++ libraries, and so can be compiled without 
	linking to libstdc++.  This can be handy for avoiding conflicts
	with different versions of this library.  Steps:
	  cd $YARP_ROOT
	  mkdir -p build/no_cxx_lib
	  cd build/no_cxx_lib
	  ../../scripts/fetch-ace.sh
	  mkdir static_libs
	  cp `g++ -print-file-name=libsupc++.a` static_libs
	  CXX=gcc CC=gcc cmake ../..
	  make
	  ldd bin/yarp  # should not contain libstdc++.so

2010-06-04  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/carriers/tcpros_carrier/yarpros.cpp: small helper program
	for hooking up yarp ports and ROS entities, to the extent
	currently possible.

          yarpros roscore <hostname> <port number>
          -- tell yarp how to reach the ros master
          -- example: yarpros roscore 192.168.0.1 11311

          yarpros read <yarpname> <nodename> <topicname>
          -- read to a YARP port from a ROS node's contribution to a topic
          -- example: yarpros read /read /talker /chatter

          yarpros write <yarpname> <nodename> <topicname>
          -- write from a YARP port to a ROS node's subscription to a topic
          -- example: yarpros write /write /listener /chatter

          yarpros rpc <yarpname> <nodename> <servicename>
          -- write/read from a YARP port to a ROS node's named service
          -- example: yarpros rpc /rpc /add_two_ints_server /add_two_ints

	When using yarp read/write/rpc in combination with these,