@@ -10,13 +10,11 @@ subdevice test_motor
 axis 8
 
 \endverbatim
-
 If this text is saved in a file called controlboard_basic.ini then the device can be created by doing:
 \verbatim
 yarpdev --file controlboard_basic.ini
 \endverbatim
 Of course, the configuration could be passed just as command line options, or as a yarp::os::Property object in a program:
-
 \code
 Property p;
 p.fromConfigFile("controlboard_basic.ini");
