@@ -9,13 +9,11 @@ Instantiates \ref cmd_device_ffmpeg_grabber "ffmpeg_grabber" device implemented 
 device ffmpeg_grabber
 source my.avi
 \endverbatim
-
 If this text is saved in a file called ffmpeg_grabber_basic.ini then the device can be created by doing:
 \verbatim
 yarpdev --file ffmpeg_grabber_basic.ini
 \endverbatim
 Of course, the configuration could be passed just as command line options, or as a yarp::os::Property object in a program:
-
 \code
 Property p;
 p.fromConfigFile("ffmpeg_grabber_basic.ini");
