@@ -14,13 +14,11 @@ standard ntsc
 width 640 
 height 480
 \endverbatim
-
 If this text is saved in a file called ffmpeg_grabber_video4linux.ini then the device can be created by doing:
 \verbatim
 yarpdev --file ffmpeg_grabber_video4linux.ini
 \endverbatim
 Of course, the configuration could be passed just as command line options, or as a yarp::os::Property object in a program:
-
 \code
 Property p;
 p.fromConfigFile("ffmpeg_grabber_video4linux.ini");
