@@ -23,13 +23,11 @@ out test.avi
 framerate 25
 
 \endverbatim
-
 If this text is saved in a file called ffmpeg_writer_basic.ini then the device can be created by doing:
 \verbatim
 yarpdev --file ffmpeg_writer_basic.ini
 \endverbatim
 Of course, the configuration could be passed just as command line options, or as a yarp::os::Property object in a program:
-
 \code
 Property p;
 p.fromConfigFile("ffmpeg_writer_basic.ini");
