@@ -11,13 +11,11 @@ subdevice portaudio
 read
 name /microphone
 \endverbatim
-
 If this text is saved in a file called grabber_audio.ini then the device can be created by doing:
 \verbatim
 yarpdev --file grabber_audio.ini
 \endverbatim
 Of course, the configuration could be passed just as command line options, or as a yarp::os::Property object in a program:
-
 \code
 Property p;
 p.fromConfigFile("grabber_audio.ini");
