@@ -13,13 +13,11 @@ height 480
 period 0.25
 name /grabber
 \endverbatim
-
 If this text is saved in a file called grabber_basic.ini then the device can be created by doing:
 \verbatim
 yarpdev --file grabber_basic.ini
 \endverbatim
 Of course, the configuration could be passed just as command line options, or as a yarp::os::Property object in a program:
-
 \code
 Property p;
 p.fromConfigFile("grabber_basic.ini");
