@@ -21,13 +21,11 @@ device test_grabber
 device controlboard
 subdevice mymotor
 \endverbatim
-
 If this text is saved in a file called group_basic.ini then the device can be created by doing:
 \verbatim
 yarpdev --file group_basic.ini
 \endverbatim
 Of course, the configuration could be passed just as command line options, or as a yarp::os::Property object in a program:
-
 \code
 Property p;
 p.fromConfigFile("group_basic.ini");
