@@ -8,13 +8,11 @@ Instantiates \ref cmd_device_opencv_grabber "opencv_grabber" device implemented 
 # read a camera using opencv
 device opencv_grabber
 \endverbatim
-
 If this text is saved in a file called opencv_grabber_basic.ini then the device can be created by doing:
 \verbatim
 yarpdev --file opencv_grabber_basic.ini
 \endverbatim
 Of course, the configuration could be passed just as command line options, or as a yarp::os::Property object in a program:
-
 \code
 Property p;
 p.fromConfigFile("opencv_grabber_basic.ini");
