@@ -19,13 +19,11 @@ device ffmpeg_writer
 out test.avi
 framerate 30
 \endverbatim
-
 If this text is saved in a file called remote_grabber_basic.ini then the device can be created by doing:
 \verbatim
 yarpdev --file remote_grabber_basic.ini
 \endverbatim
 Of course, the configuration could be passed just as command line options, or as a yarp::os::Property object in a program:
-
 \code
 Property p;
 p.fromConfigFile("remote_grabber_basic.ini");
