@@ -11,13 +11,11 @@ width 640
 height 480
 period 0.25
 \endverbatim
-
 If this text is saved in a file called test_grabber_basic.ini then the device can be created by doing:
 \verbatim
 yarpdev --file test_grabber_basic.ini
 \endverbatim
 Of course, the configuration could be passed just as command line options, or as a yarp::os::Property object in a program:
-
 \code
 Property p;
 p.fromConfigFile("test_grabber_basic.ini");
