@@ -9,13 +9,11 @@ Instantiates \ref cmd_device_test_motor "test_motor" device implemented by yarp:
 device test_motor
 axes 8
 \endverbatim
-
 If this text is saved in a file called test_motor_basic.ini then the device can be created by doing:
 \verbatim
 yarpdev --file test_motor_basic.ini
 \endverbatim
 Of course, the configuration could be passed just as command line options, or as a yarp::os::Property object in a program:
-
 \code
 Property p;
 p.fromConfigFile("test_motor_basic.ini");
